# forc

./: .gitignore  .markdownlint.yaml  Cargo.toml  README.md  RELEASING.md  releases.toml  rust-toolchain.toml
.github/workflows/: ci.yml
.github/workflows/scripts/: update_releases.sh  verify_tag.sh
forc-client/: CHANGELOG.md  Cargo.toml
forc-client/src/op/call/: call_function.rs  list_functions.rs  mod.rs
forc-client/src/op/call/trace/: storage.rs
forc-client/src/util/: target.rs
forc-client/test/data/big_contract/: Forc.toml
forc-client/test/data/contract_with_dep/: Forc.toml
forc-client/test/data/contract_with_dep_with_salt_conflict/: Forc.toml
forc-client/test/data/contract_with_types/: Forc.toml
forc-client/test/data/deployed_predicate/: Forc.toml
forc-client/test/data/deployed_script/: Forc.toml
forc-client/test/data/standalone_contract/: Forc.toml
forc-client/tests/: deploy.rs
forc-crypto/: CHANGELOG.md  Cargo.toml
forc-crypto/src/: main.rs
forc-node/: CHANGELOG.md  Cargo.toml
forc-node/src/: main.rs
forc-tracing/: CHANGELOG.md  Cargo.toml
forc-tracing/src/: lib.rs
forc-wallet/: CHANGELOG.md  Cargo.toml
forc-wallet/src/: account.rs  main.rs
