[package]
name = "forc-crypto"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "forc-crypto-0.71.x" git tag.
version = "0.71.1"
description = "A `forc` plugin for handling various cryptographic operations and conversions."
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["telemetry"]
telemetry = ["forc-tracing/telemetry"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
forc-tracing.workspace = true
forc-util.workspace = true
fuel-core-types.workspace = true
fuel-crypto = { version = "0.66", features = ["random"] }
fuels-accounts.workspace = true
fuels-core.workspace = true
futures.workspace = true
hex.workspace = true
libp2p-identity = { workspace = true, features = ["peerid", "secp256k1"] }
openssl.workspace = true
rand.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha3.workspace = true
termion.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "bench_main"
harness = false

[lints]
workspace = true
