[package]
name = "forc-tracing"
version = "0.70.2"
description = "Tracing utility shared between forc crates."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansiterm.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
