[package]
name = "forc-tracing"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "forc-tracing-0.71.x" git tag.
version = "0.71.0"
description = "Tracing utility shared between forc crates."
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansiterm.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
tracing-test.workspace = true

[lints]
workspace = true
