[package]
name = "forc-tracing"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "forc-tracing-0.72.x" git tag.
version = "0.72.0"
description = "Tracing utility shared between forc crates."
edition = "2021"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["telemetry"]
telemetry = ["dep:fuel-telemetry"]

[dependencies]
anyhow.workspace = true
ansiterm.workspace = true
fuel-telemetry = { workspace = true, optional = true }
regex.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
serial_test.workspace = true
tracing-test.workspace = true

[lints]
workspace = true
