[package]
name = "forc-wallet"
# When releasing to crates.io:
# - Remove path dependencies
# - Update CHANGELOG.md.
# - Create "forc-wallet-0.16.x" git tag.
version = "0.16.2"
description = "A forc plugin for generating or importing wallets using mnemonic phrases."
edition = "2024"
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["telemetry"]
telemetry = ["forc-tracing/telemetry"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
eth-keystore.workspace = true
forc-tracing.workspace = true
fuels = "0.75"
futures.workspace = true
hex.workspace = true
home.workspace = true
rand = { version = "0.8", default-features = false }
rpassword.workspace = true
serde_json.workspace = true
termion.workspace = true
tokio = { workspace = true, features = ["full"] }
url.workspace = true

[lib]
name = "forc_wallet"
path = "src/lib.rs"

[[bin]]
name = "forc-wallet"
path = "src/main.rs"

[dev-dependencies]
fuel-core-client = "0.46.0"
tempfile = "3.19"
wiremock = "0.6"
